fixed [Deals] removed a afew components z-index

--- a/app/styles/components/pages/deals/dashboard/_edit_form.scss
+++ b/app/styles/components/pages/deals/dashboard/_edit_form.scss
@@ -7,7 +7,7 @@
   left: 70px;
   right: 0;
   top: 0;
-  z-index: 102;
+  // z-index: 102;
   bottom: 0;
   background: #fff;
 
