--- a/app/styles/components/pages/deals/dashboard/_esign.scss
+++ b/app/styles/components/pages/deals/dashboard/_esign.scss
@@ -6,7 +6,7 @@
   left: 0;
   top: 0;
   right: 0;
-  z-index: 103;
+  z-index: 1000;
   display: flex;
   align-items: center;
   justify-content: center;
