--- a/app/styles/components/pages/deals/dashboard/_esign_compose.scss
+++ b/app/styles/components/pages/deals/dashboard/_esign_compose.scss
@@ -6,7 +6,6 @@
   bottom: 0;
   height: 610px;
   width: 550px;
-  z-index: 102;
   border-radius: 3px 3px 0 0;
   background-color: #fff;
   box-shadow: 0 8px 12px 0 rgba(0, 0, 0, 0.15);
